--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "jotai": "^2.12.2",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
@@ -60,13 +61,13 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^5.2.3",
-    "prettier": "^3.5.3",
     "@eslint/eslintrc": "^3",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
